--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@ $(document).ready(function () {
 <div id="data-visualization" class="section level3">
 <h3>Data Visualization</h3>
 <ul>
-<li><a href="gg00_intro-to-data-viz.html">Introduction to Data Visualization with ggplot2</a> <em>exercises for introducing ggplot2</em></li>
+<li><a href="gg00_intro-to-data-viz.html">Introduction to Data Visualization with ggplot2</a> <em>introducing the grammar of graphics (ggplot2)</em></li>
 <li><a href="gg01_data-viz-as-comm.html">Data Visualization as Communication</a> <em>using graphs to effectively share ideas</em></li>
 <li><a href="gg02_adv-data-viz.html">Advanced Data Visualization</a> <em>extending ggplot2</em></li>
 </ul>
