new joins section

--- a/dt00_data-manipulations.html
+++ b/dt00_data-manipulations.html
@@ -609,8 +609,8 @@ library(tidyverse)</code></pre>
 </div>
 </div>
 </div>
-<div id="create-function-pipelines-with" class="section level2 tabset" number="1.7">
-<h2 class="tabset" number="1.7"><span class="header-section-number">1.7</span> Create function pipelines with %&gt;%</h2>
+<div id="function-pipelines" class="section level2 tabset" number="1.7">
+<h2 class="tabset" number="1.7"><span class="header-section-number">1.7</span> Function pipelines</h2>
 <p>The pipe (<code>%&gt;%</code>) takes an object that comes before it, and it drops the object into the function that comes after it.</p>
 <div id="pipe-exercise-1" class="section level3" number="1.7.1">
 <h3 number="1.7.1"><span class="header-section-number">1.7.1</span> Pipe exercise 1</h3>
