new adv data manip

--- a/dt00_data-manipulations.html
+++ b/dt00_data-manipulations.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Data Manipulation</title>
+<title>Introduction to Data Manipulation</title>
 
 <script src="site_libs/header-attrs-2.5.3/header-attrs.js"></script>
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
@@ -85,6 +85,7 @@ h6 {
   text-align: left;
 }
 </style>
+
 
 
 
@@ -396,7 +397,7 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">Data Manipulation</h1>
+<h1 class="title toc-ignore">Introduction to Data Manipulation</h1>
 
 </div>
 
