--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@ h6 {
 
 
 
+
 <style type = "text/css">
 .main-container {
   max-width: 940px;
@@ -316,8 +317,8 @@ $(document).ready(function () {
 <div id="introduction-to-r-rstudio" class="section level3">
 <h3>Introduction to R &amp; RStudio</h3>
 <ul>
-<li><a href="bk00_functions-and-objects.html">Introduction to R Programming</a> <em>functions and objects</em></li>
-<li><a href="bk01_workflow-best-practices.html">R Workflow Best Practices</a> <em>managing code, data, and files</em></li>
+<li><a href="bk00_workflow-best-practices.html">R Workflow Best Practices</a> <em>managing code, data, and files</em></li>
+<li><a href="bk01_functions-and-objects.html">Introduction to R Programming</a> <em>functions and objects</em></li>
 </ul>
 </div>
 <div id="reproducible-analysis-with-r-markdown" class="section level3">
@@ -329,8 +330,9 @@ $(document).ready(function () {
 <div id="data-manipulation-and-transformation" class="section level3">
 <h3>Data Manipulation and Transformation</h3>
 <ul>
-<li><a href="dt00_data-manipulations.html">Data Manipulation</a> <em>introduction to wrangling data</em></li>
+<li><a href="dt00_data-manipulations.html">Introduction to Data Manipulation</a> <em>introduction to wrangling data</em></li>
 <li><a href="dt01_data-trans-joins-exercises.html">Reshaping, Transforming, and Joining Data in R</a> <em>transpose, pivot, split, and combine data</em></li>
+<li><a href="dt02_adv-data-manip-joins.html">Advanced Data Transformation and Manipulation</a> <em>dealing with complex data structures</em></li>
 </ul>
 </div>
 <div id="data-visualization" class="section level3">
